# AdeA-Shift-Automation

./: README.md  main.py  pyproject.toml
udea_shift_automation/: bot.py  config.py  selenium_client.py
