[tool.poetry]
name = "udea_shift_automation"
version = "0.1.0"
description = "Automatization of UdeA shift proccess"
authors = ["Luis Papiernik <lpapiernik24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "*"
selenium = "^4.4.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
